# test_task

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  settings.py
_docker/: Dockerfile
controller/: main.py  manipulator.py  models.py  schemas.py  service.py
manipulator/: main.py
sensor/: main.py  schemas.py
src/: settings.py
src/controller/: database.py  main.py  manipulator.py  models.py  schemas.py  service.py  settings.py
src/manipulator/: main.py  settings.py
src/sensor/: main.py  schemas.py
