[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Arsen1406 <arsen8577711@yandex.ru>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
httpx = "^0.24.1"
loguru = "^0.7.0"
sqlalchemy = "^2.0.19"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
