[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Arsen1406 <arsen8577711@yandex.ru>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
fastapi = "^0.92.0"
loguru = "^0.7.0"
uvicorn = "^0.20.0"
pydantic = { extras = ["dotenv", "email"], version = "^1.10.5" }
python-dotenv = "^1.0.0"
asyncpg = "0.27.0"
asyncio = "3.4.3"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
